changed styling to fix covering one image with another

--- a/src/App.css
+++ b/src/App.css
@@ -16,11 +16,6 @@
   height: 500px; 
 }
 
-.skeleton {
-  position: absolute;
-  height: 500px;
-}
-
 .pose-detection-img {
   position: relative;
   width: 500px; /* Match the image and canvas size */
@@ -40,4 +35,8 @@
   width: 100%;
   height: 100%;
   pointer-events: none; /* Prevents interaction */
+}
+.pose-detection-vid {
+  position: relative;
+  height: 500px;
 }
